--- a/moneyTrackerFrontend/src/App.css
+++ b/moneyTrackerFrontend/src/App.css
@@ -1,7 +1,7 @@
 #root {
   display: grid;
   width:100%;
-  height: 100dvh;
+  height: 100%;
   text-align: center;
 }
 
@@ -33,4 +33,39 @@ nav .selected a:link{
   color:  var(--white-theme);
   padding: 0.5rem;
   border-radius: 5px;
+}
+
+.loading-image-frame{
+  width: 70px;
+}
+
+.loader{
+  background-color: whitesmoke;
+  width:calc(100% + 20px);
+  height: calc(100% + 20px);
+  border:10px solid orange;
+  animation: loading 1200ms ease-out infinite;
+  z-index:-1;
+}
+
+@keyframes loading {
+  0%{
+    width:calc(100% + 20px);
+    height: calc(100% + 20px);
+    border:10px solid orange;
+  }
+
+  50%{
+    width:calc(100% + 30px);
+    height: calc(100% + 30px);
+    border:7px solid rgb(255, 102, 0);
+  }
+
+  100%{
+    width:calc(100% + 40px);
+    height: calc(100% + 40px);
+    border:4px solid rgb(255, 38, 0);
+
+  }
+
 }
