--- a/moneyTrackerFrontend/src/App.css
+++ b/moneyTrackerFrontend/src/App.css
@@ -61,10 +61,15 @@ nav .selected a:link{
 }
 
 /*  Error */
-.errorField{
+.errorField,
+.errorFieldSmall{
   color:crimson;
   width: 100%;
   margin-top: 0.5rem;
+}
+
+.errorFieldSmall{
+  font-size: small;
 }
 
 @keyframes loading {
